test/invalid/baseline/scopedname.txt
Syntax error at line 2 in scopedname.webidl:
  typedef gfx::geom::
             ^ Typedef lacks a name
